feat: update docs,  and add unauthorized to tokeAuthMiddleware response when token is missing.
