# api/docs/swagger.json
@@ -33,7 +33,7 @@
                 "summary": "Get JWT",
                 "parameters": [
                     {
-                        "description": "find-by-id request",
+                        "description": "user-credentials request",
                         "name": "request",
                         "in": "body",
                         "required": true,
@@ -43,14 +43,23 @@
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.JWTResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handler.ErrorResponse"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "type": "array",
                             "items": {
@@ -72,6 +81,11 @@
         },
         "/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Find By UserId",
                 "consumes": [
                     "application/json"
@@ -135,7 +149,7 @@
                 "summary": "Register User",
                 "parameters": [
                     {
-                        "description": "find-by-id request",
+                        "description": "register-user request",
                         "name": "request",
                         "in": "body",
                         "required": true,
